hphp/test/zend/good/ext/intl/tests/dateformat_get_timezone_id.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if( !extension_loaded( 'intl' ) ) print 'skip';
}
