hphp/test/zend/bad/ext/intl/tests/bug59597_64.php.skipif
<?php if( !extension_loaded( 'intl' ) ) print 'skip'; ?>
<?php echo PHP_INT_SIZE != 8 ? "skip 64-bit only" : "OK"; ?>